force-app/main/default/objects/ADM_Application__c/fields/Application_Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Application_Planned_Duration__c</fullName>
    <label>Default Planned Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>