force-app/main/default/objects/ADM_Application__c/fields/Chatter_Post_Group__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Group__c</fullName>
    <description>This is the Chatter Group to which the Release Alert will be posted via the &quot;Post Release Alert&quot; button in the Release Records.</description>
    <inlineHelpText>Enter the 15 character ID for the Chatter group to which Release Alerts will be posted when the &quot;Post Release Alert&quot; button is selected.</inlineHelpText>
    <label>Chatter Post Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>