force-app/main/default/objects/ADM_Application__c/fields/Current_Major_Release__c.field-meta.xml
<CustomField>
    <fullName>Current_Major_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Applications that have staggered Major Release deployments with overlapping active release lines, the Current Major Release is the older of the two active release.</description>
    <inlineHelpText>Enter the name of the initial Major Release record for the older of the two active Major Releases.</inlineHelpText>
    <label>Current Major Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>