force-app/main/default/objects/ADM_Application__c/fields/Daily_Release_Stagger__c.field-meta.xml
<CustomField>
    <fullName>Daily_Release_Stagger__c</fullName>
    <description>This text field is inserted before the Schedule of generated Release Alert posts for Daily and Emergency Releases which are under the Current Major Release.</description>
    <inlineHelpText>Enter Release Alert header text for Daily Releases of the Current Major Release.</inlineHelpText>
    <label>Daily Header Text [Current Major]</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>