force-app/main/default/objects/ADM_Application__c/fields/Duplicate_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Application_Name__c</fullName>
    <description>This field is set by the ADM_Application.trigger with the Application record&#39;s name to detect when duplicate names are used.</description>
    <label>Duplicate Application Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>