force-app/main/default/objects/ADM_Application__c/fields/Enable_ERR_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Enable_ERR_Notification_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this checkbox to enable notification emails for eRelease Requests. This functionality replaces the workflow-based notifications. The corresponding workflow for this Application should be deactivated when this box is checked, otherwise recipients may receive duplicate notifications.</description>
    <inlineHelpText>Set this checkbox to enable notification emails for eRelease Requests. To avoid duplicate notifications, disable the corresponding eRelease Request notification workflow for this Application.</inlineHelpText>
    <label>Enable ERR Notification Emails</label>
    <type>Checkbox</type>
</CustomField>