force-app/main/default/objects/ADM_Application__c/fields/Enable_Release_Planning_Case_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Release_Planning_Case_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Release Planning system will generate Cases for generated Release Events.</description>
    <inlineHelpText>When Release Planning is enabled, will generate Cases for generated Release Events.</inlineHelpText>
    <label>Enable Release Planning Case Creation</label>
    <type>Checkbox</type>
</CustomField>