force-app/main/default/objects/ADM_Application__c/fields/Internal_Instances__c.field-meta.xml
<CustomField>
    <fullName>Internal_Instances__c</fullName>
    <description>Space separated list of instances to be excluded from customer facing posts of Planned Release Schedule</description>
    <inlineHelpText>Enter a space separated list of instances to be excluded from customer facing posts of Planned Release Schedule</inlineHelpText>
    <label>Internal Instances</label>
    <length>80</length>
    <type>Text</type>
</CustomField>