force-app/main/default/objects/ADM_Application__c/fields/Major_Release_Stagger__c.field-meta.xml
<CustomField>
    <fullName>Major_Release_Stagger__c</fullName>
    <description>This field contains the template for the Major Release Stagger</description>
    <inlineHelpText>Enter the template for the Major Release Stagger</inlineHelpText>
    <label>Major Release Stagger</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>