force-app/main/default/objects/ADM_Application__c/fields/Next_Major_Release__c.field-meta.xml
<CustomField>
    <fullName>Next_Major_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Applications that have staggered Major Release deployments with overlapping active release lines, the Next Major Release is the newer of the two active release.</description>
    <inlineHelpText>Enter the name of the initial Major Release record for the newer of the two active Major Releases.</inlineHelpText>
    <label>Next Major Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Applications (Next Major Release)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>