force-app/main/default/objects/ADM_Application__c/fields/Other_Release_Stagger__c.field-meta.xml
<CustomField>
    <fullName>Other_Release_Stagger__c</fullName>
    <description>This contains the release stagger for any distributed apps or other releases that are not Major, Patches, or eReleases.</description>
    <inlineHelpText>This contains the release stagger for any distributed apps or other releases that are not Major, Patches, or eReleases.</inlineHelpText>
    <label>Other Release Stagger</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>