force-app/main/default/objects/ADM_Application__c/fields/Patch_Header_Text_Next_Major__c.field-meta.xml
<CustomField>
    <fullName>Patch_Header_Text_Next_Major__c</fullName>
    <description>This text field is inserted before the Schedule of generated Release Alert posts for Patch Releases which are under the Next Major Release.</description>
    <inlineHelpText>Enter Release Alert header text for patch releases of the Next Major Release.</inlineHelpText>
    <label>Patch Header Text [Next Major]</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>