force-app/main/default/objects/ADM_Application__c/fields/Patch_Stagger__c.field-meta.xml
<CustomField>
    <fullName>Patch_Stagger__c</fullName>
    <description>This text field is inserted before the Schedule of generated Release Alert posts for Patch Releases which are under the Current Major Release.</description>
    <inlineHelpText>Enter Release Alert header text for patch releases of the Current Major Release.</inlineHelpText>
    <label>Patch Header Text [Current Major]</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>