force-app/main/default/objects/ADM_Application__c/fields/Primary_Chatter_Post_Notes__c.field-meta.xml
<CustomField>
    <fullName>Primary_Chatter_Post_Notes__c</fullName>
    <description>This text field is inserted below the Schedule of generated Release Alert posts for posts to the Primary Chatter group for all Releases which are under the Current Major Release.</description>
    <inlineHelpText>Enter Primary Chatter group Release Alert footer text for Releases of the Current Major Release.</inlineHelpText>
    <label>Primary Footer Text [Current Major]</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>