force-app/main/default/objects/ADM_Application__c/fields/Second_Chatter_Post_Email__c.field-meta.xml
<CustomField>
    <fullName>Second_Chatter_Post_Email__c</fullName>
    <description>Email address to send an external post of a Release Alert, for example, an external Chatter group. Intended for sending Release Alerts to a Chatter group in a different Salesforce org.</description>
    <inlineHelpText>Enter an email address to which Release Alerts will be posted when the &quot;Post Release Alert&quot; button is selected, for example, an external Chatter group.</inlineHelpText>
    <label>External Post Email</label>
    <type>Email</type>
</CustomField>