force-app/main/default/objects/ADM_Application__c/fields/Secondary_Release_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Release_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary or backup Release Manager for this Application.</description>
    <inlineHelpText>Enter the secondary or backup Release Manager for this Application.</inlineHelpText>
    <label>Secondary Release Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ADM_Application_RM2</relationshipName>
    <type>Lookup</type>
</CustomField>