force-app/main/default/objects/ADM_Application__c/validationRules/Release_Planning_Must_Be_Enabled_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Planning_Must_Be_Enabled_Case</fullName>
    <active>false</active>
    <description>Release Planning must be enabled to enable Case Creation.</description>
    <errorConditionFormula>Enable_Release_Planning__c != true &amp;&amp; Enable_Release_Planning_Case_Creation__c == true</errorConditionFormula>
    <errorDisplayField>Enable_Release_Planning__c</errorDisplayField>
    <errorMessage>Release Planning must be enabled to enable Case Creation.</errorMessage>
</ValidationRule>