force-app/main/default/objects/ADM_Application__c/validationRules/Space_Separated_Instances.validationRule-meta.xml
<ValidationRule>
    <fullName>Space_Separated_Instances</fullName>
    <active>true</active>
    <description>Format is: blank, NA1 (one or two digits)  NA1 NA2 or NA1 NA2 ... NA99</description>
    <errorConditionFormula>NOT(REGEX( Internal_Instances__c , &quot;|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?$|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?((?: (?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?)+)* (?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?&quot;))</errorConditionFormula>
    <errorDisplayField>Internal_Instances__c</errorDisplayField>
    <errorMessage>Instance list must be of the form: NA1 NA2 CS2 ...
Use capital letters and only a space between instances.
Allowed prefixes are NA, CS, EU, AP, GS or SR only.</errorMessage>
</ValidationRule>