force-app/main/default/objects/ADM_Application__c/validationRules/Specify_Application_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Application_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Application_Type__c))</errorConditionFormula>
    <errorDisplayField>Application_Type__c</errorDisplayField>
    <errorMessage>Application Type must be specified.</errorMessage>
</ValidationRule>