force-app/main/default/objects/ADM_Application__c/validationRules/Specify_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Category</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( Category__c ))</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>The Application&#39;s Category must be specified.</errorMessage>
</ValidationRule>