force-app/main/default/objects/ADM_Application__c/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>NAME</columns>
    <columns>Application_Type__c</columns>
    <columns>Primary_Release_Manager__c</columns>
    <columns>Secondary_Release_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Details</label>
</ListView>